Add ability to edit/delete books

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </section>
     <h2>Search by Title</h2>
 		<input type="text" name="" value="">
-		<button type="button" name="button">Lookup title</button>
-    <h2>Adding:</h2>
-		<img src="" alt="Book cover">
+		<button id="addBook" type="button" name="button">Lookup title</button>
+    <!-- <h2>Adding:</h2> -->
+		<img id="coverImg" src="" alt="Book cover">
     <h3></h3>
     <h2>TBR List:</h2>
     <ul id="tbr"></ul>
